Fixed code block max width on mobile. Dissabled the banner script

--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -161,6 +161,10 @@
   pre {
     margin: 0 !important;
   }
+
+  @media (max-width: 480px) {
+    max-width: 90vw;
+  }
 }
 
 .codeHeader {
